hphp/hack/test/typecheck/shape_type.php.exp
File "shape_type.php", line 3, characters 15-19:
"shape" is an invalid type; you need to declare and use a specific shape type. (Naming[2059])
